<resources>
    <string name="app_name">Мои задачи</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_password_confirm">Повторите пароль</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="enter">Войти</string>
    <string name="logout">Выйти</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Авторизация</string>
    <string name="goToSignup">Нет аккаунта? Зарегистрироваться</string>
    <string name="goToSignin">Есть аккаунт? Войдите</string>
    <string name="create_task">Создать задачу</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="enter_task_title">Введите название задачи</string>
    <string name="todo">Задача</string>
    <string name="enter_task">Введите задачу</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="splash">SSAU Todo App</string>
</resources>